--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ numpy = "^2.3.0"
 matplotlib = "^3.10.0"
 aiosignal = "^1.4.0"
 pytest-cov = "^7.0.0"
+websockets = "^15.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^8.4.0"
