--- a/.gitignore
+++ b/.gitignore
@@ -4,164 +4,42 @@ __pycache__/
 *$py.class
 *.so
 .Python
-env/
-venv/
-ENV/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
 *.egg-info/
-.installed.cfg
-*.egg
+dist/
+build/
 
-# Poetry
-poetry.lock
+# Virtual Environment
+venv/
+.venv/
+env/
+ENV/
 
 # Environment variables
 .env
-.env.local
-.env.*.local
 
 # IDE
-.vscode/
 .idea/
+.vscode/
 *.swp
 *.swo
 *~
+
+# Logs
+logs/*.log
+logs/*.png
+*.log
+
+# Charts
+charts/*.png
+
+# Cache
+.pytest_cache/
+.coverage
+*.cache
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Logs
-*.log
-logs/
-
-# Bot specific
-config.json
-screenshots/
-
-# Environment
-.env
-.env.local
-
-# Virtual environment
-venv/
-ENV/
-
-# IDE
-.vscode/
-.idea/
-
-# Logs and screenshots
-logs/
-screenshots/
-*.log
-*.png
-
-# Cache
-.pytest_cache/
-.mypy_cache/
-
-# Environment
-.env
-.env.local
-
-# Virtual environment
-venv/
-ENV/
-
-# IDE
-.vscode/
-.idea/
-
-# Logs and screenshots
-logs/
-screenshots/
-*.log
-*.png
-
-# Cache
-.pytest_cache/
-.mypy_cache/
-
-# Environment
-.env
-.env.local
-
-# Virtual environment
-venv/
-ENV/
-
-# IDE
-.vscode/
-.idea/
-
-# Logs and screenshots
-logs/
-screenshots/
-*.log
-*.png
-
-# Cache
-.pytest_cache/
-.mypy_cache/
-EOFclear
-# Шаг 1: Обновляем pyproject.toml
-cat > pyproject.toml << 'EOF'
-[tool.poetry]
-name = "mexc-signal-bot"
-version = "0.1.0"
-description = "MEXC futures signal bot with Telegram notifications"
-authors = ["muhammet"]
-readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.12"
-aiogram = "^3.22.0"
-aiohttp = "^3.12.0"
-python-dotenv = "^1.1.0"
-numpy = "^2.3.0"
-matplotlib = "^3.10.0"
-aiosignal = "^1.4.0"
-
-[tool.poetry.dev-dependencies]
-pytest = "^8.4.0"
-black = "^25.9.0"
-ruff = "^0.13.0"
-mypy = "^1.13.0"
-
-[build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
-
-# Environment
-.env
-.env.local
-
-# Virtual environment
-venv/
-ENV/
-
-# IDE
-.vscode/
-.idea/
-
-# Logs and screenshots
-logs/
-screenshots/
-*.log
-*.png
-
-# Cache
-.pytest_cache/
-.mypy_cache/
+# Project specific
+data/.pairs_cache.txt
